--- a/ShopApp/ShopApp/ShopApp.csproj
+++ b/ShopApp/ShopApp/ShopApp.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ShopInventory.cs" />
-    <Compile Include="StartBrowseScreen.cs" />
+    <Compile Include="BrowseScreen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
