--- a/ShopApp/ShopApp/ShopApp.csproj
+++ b/ShopApp/ShopApp/ShopApp.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonAcces.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ShopInventory.cs" />
